[package]
name = "understand_tokio_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
tokio = {version ="1.17.0", features = ["full"]}

[build]
rustc-wrapper = "/Users/zhouyou/.cargo/bin/sccache"
